--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.linkedin.com/in/kevin-mach/">View My LinkedIn Profile</a> 
   
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
