--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,19 @@
 title: Kevin Mach # your name (or website title) here
 logo: "/images/DSC02534insta.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  **About**
+ 
   Currently @ Seattle Pacific University
   <br><br>
   Bachelor of Science: Computer Science, Graduation 2021
   <br><br>
   Software Engineer 
   <br><br>
-  I am interested in full-stack development along with understanding the basic needs of individuals and progressing that forward by creating application and technology that will enrich their lives. I hope to make video games that I will be educational while providing an entertaining factor. I currently play games myself such as League of Legends, Call of Duty: Modern Warfare, and Super Smash Bros. Ultimate. 
+  Desc: >
+    I am interested in full-stack development along with understanding the basic needs of individuals 
+    and progressing that forward by creating application and technology that will enrich their lives. 
+    I hope to make video games that I will be educational while providing an entertaining factor. 
+    I currently play games myself such as League of Legends, Call of Duty: Modern Warfare, and Super Smash Bros. Ultimate. 
+
   <a href="https://www.linkedin.com/in/kevin-mach/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
