--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Software Engineer 
   <br><br>
-  Desc: >
+  description: >
     I am interested in full-stack development along with understanding the basic needs of individuals 
     and progressing that forward by creating application and technology that will enrich their lives. 
     I hope to make video games that I will be educational while providing an entertaining factor. 
