--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Kevin Mach # your name (or website title) here
 logo: "/images/DSC02534insta.png?raw=true" # your photo (or logo) here
-bold:
-- Me
+<b>About Me<b>
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <b>**About** Me<b>
   <br><br>
   Currently @ Seattle Pacific University
   <br><br>
