--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Kevin Mach # your name (or website title) here
 logo: "/images/DSC02534insta.png?raw=true" # your photo (or logo) here
 about: >
-  <b>About Me<b>
+  <b><b>
+  About Me
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   Currently @ Seattle Pacific University
