--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Kevin Mach # your name (or website title) here
 logo: "/images/DSC02534insta.png?raw=true" # your photo (or logo) here
+description: >
+  <b><b>
+  About Me
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Currently @ Seattle Pacific University
   <br><br>
