--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Kevin Mach # your name (or website title) here
 logo: "/images/DSC02534insta.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Currently @ Seattle Pacific University
+  Current Junior @ Seattle Pacific University
   <br><br>
-  Bachelor of Science: Computer Science, Graduation 2021
+  Computer Science: BS, Graduation 2021
   <br><br>
-  Software Engineer 
+  Software Engineer, Front-End Programmer, Back-End Programmer, Cloud Applications, Data Visualization, User Interface Designer 
   <br><br>
   
   I am interested in full-stack development along with understanding the basic needs of individuals 
