--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/DSC02534insta.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Current Senior @ Seattle Pacific University
   <br><br>
-  Computer Science: BS, Graduation 2021
+  Major: Bachelor of Science in Computer Science, Graduation 2021
   <br><br>
   Software Engineer, Front-End Programmer, Back-End Programmer, Cloud Applications, Data Visualization, User Interface Designer 
   <br><br>
